tests/haste_namespaces/haste_namespaces.exp
Error --------------------------------------------------------------------------------------------- common/Common.js:3:1

Cannot cast `web` to empty because string [1] is incompatible with empty [2]. [incompatible-type]

   common/Common.js:3:1
   3| web as empty; // error: string ~> empty
      ^^^

References:
   web/WebOnly.js:6:27
   6| declare export const web: string;
                                ^^^^^^ [1]
   common/Common.js:3:8
   3| web as empty; // error: string ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------- native/JsConflict.js:1:1

Duplicate module provider for `JsConflict`. Change either the name of this file or the name of the current module
provider [1]. [duplicate-module]

   native/JsConflict.js:1:1
   1|
      

References:
   common/JsConflict.js:1:1
   1|
       [1]


Error ---------------------------------------------------------------------------------- web/JsFlowConflict2.js.flow:1:1

Duplicate module provider for `JsFlowConflict2`. Change either the name of this file or the name of the current module
provider [1]. [duplicate-module]

   web/JsFlowConflict2.js.flow:1:1
   1| declare const foo: number; // error in common interface file
      

References:
   common/JsFlowConflict2.js.flow:1:1
   1| declare const foo: string;
       [1]


Error ------------------------------------------------------------------------------------- web/SameNameNotCommon.js:1:1

Duplicate module provider for `SameNameNotCommon`. Change either the name of this file or the name of the current module
provider [1]. [duplicate-module]

   web/SameNameNotCommon.js:1:1
   1|
      

References:
   native/SameNameNotCommon.js:1:1
   1|
       [1]


Error ----------------------------------------------------------------------------------------- web/Untyped2.js.flow:1:1

Duplicate module provider for `Untyped2`. Change either the name of this file or the name of the current module
provider [1]. [duplicate-module]

   web/Untyped2.js.flow:1:1
   1| // @noflow
      

References:
   common/Untyped2.js.flow:1:1
   1| // Error against web/Untypes2.js.flow, because we shouldn't have two js.flow file with the same Haste name
       [1]


Error ----------------------------------------------------------------------------------------------- web/WebOnly.js:4:1

Cannot cast `foo` to empty because string [1] is incompatible with empty [2]. [incompatible-type]

   web/WebOnly.js:4:1
   4| foo as empty; // error: string ~> empty
      ^^^

References:
   common/CommonLib.js:1:27
   1| declare export const foo: string;
                                ^^^^^^ [1]
   web/WebOnly.js:4:8
   4| foo as empty; // error: string ~> empty
             ^^^^^ [2]



Found 6 errors
